Segundo envio - Troca da tipificação da variável anoAtual por const

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <h1>S3-11 | Javascript: Praticando com Variáveis</h1>
 </body>
 
-<script src="script.js">ew32</script>
+<script src="script.js"></script>
 </html>
